--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /* http://meyerweb.com/eric/tools/css/reset/    v2.0 | 20110126   License: none (public domain)*/html, body, div, span, applet, object, iframe,h1, h2, h3, h4, h5, h6, p, blockquote, pre,a, abbr, acronym, address, big, cite, code,del, dfn, em, img, ins, kbd, q, s, samp,small, strike, strong, sub, sup, tt, var,b, u, i, center,dl, dt, dd, ol, ul, li,fieldset, form, label, legend,table, caption, tbody, tfoot, thead, tr, th, td,article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary,time, mark, audio, video {	margin: 0;	padding: 0;	border: 0;	font-size: 100%;	font: inherit;	vertical-align: baseline;}/* HTML5 display-role reset for older browsers */article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {	display: block;}body {	line-height: 1;}ol, ul {	list-style: none;}blockquote, q {	quotes: none;}blockquote:before, blockquote:after,q:before, q:after {	content: '';	content: none;}table {	border-collapse: collapse;	border-spacing: 0;}
 *{
   scroll-behavior: smooth;
+  box-sizing: border-box;
 }
 
 body{
@@ -37,14 +38,14 @@ position: absolute;
 text-align: center;
 }
 
-.delay-element {
+/* .delay-element {
   position: absolute;
   width: 100px;
   height: 100px;
   z-index: 3;
   transform: translate(-50%,-50%);
   pointer-events: none;
-}
+} */
 
 h1{
   color: white;
@@ -187,7 +188,7 @@ p {
 }
 
 .luuk-cont{
-  max-width: 1050px;
+  max-width: 1300px;
   margin: 0 auto;
   width: 100%;
   /* height: 300px; */
@@ -196,8 +197,8 @@ p {
   border-bottom: 15px solid #000000;
   border-radius: 2rem;
   padding: 2rem;
-  padding-left: 5rem;
-  padding-right: 5rem;
+  padding-left: 8rem;
+  padding-right: 8rem;
 }
 
 .luuk-cont h2{
@@ -222,4 +223,76 @@ gap: 10px;
 .tak img{
   width: 4rem;
   margin: 0 auto;
+}
+
+.luuk-cont-jaren{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  max-width: 1300px;
+  margin: 0 auto;
+  margin-top: 100px;
+  gap: 20px;
+}
+
+.jaar{
+  width: calc(50% - 20px);
+  border: 2px solid #000000;
+  background-color: #ffd400;
+  border-bottom: 15px solid #000000;
+  height: 300px;
+  border: 2px solid #000000;
+  background-color: #ffd400;
+  border-bottom: 15px solid #000000;
+  border-radius: 2rem;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;  /* margin: 5px; */
+
+}
+
+.jaar:hover{
+  cursor: pointer;
+}
+
+.active{
+  /* background-color: red; */
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.active .show{
+  display: none;
+}
+.hidden{
+  display: none;
+}
+
+.active .hidden{
+  display: block;
+}
+
+.show p{
+  margin-bottom: 10px;
+}
+.jaar .more2 p {
+  margin-bottom: 0;
+  /* margin-top: 5px; */
+  position: relative;
+  display: inline;
+}
+.jaar .more2 p::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 0;
+  height: 2px;
+  background-color: black;
+  transition: width 0.5s ease;
+}
+
+.jaar:hover .more2 p::before {
+  width: 100%;
 }
