--- a/style.css
+++ b/style.css
@@ -307,6 +307,7 @@ gap: 10px;
   justify-content: space-between;
 }
 
+
 .hidden img{
   display: none;
   border-radius: 1rem;
@@ -394,4 +395,65 @@ gap: 10px;
   flex-direction: row;
   width: 100%;
   align-items: center;
+}
+
+.flexfotosdaan{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 100%;
+  
+  gap: 20px;
+  margin: 0 auto;
+}
+
+#fotofrustratie{
+  width: 23%;
+}
+#vavo{
+  width: 23%;
+}
+
+#fysio{
+  width: 23%;
+}
+
+#tussen{
+  width: 23%;
+}
+
+.lijstfotos{
+  display: flex;
+  margin: 0 auto;
+  margin-top: 20px;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+gap: 10px;
+
+}
+
+.lijst1{
+  width: 23%;
+}
+
+.flexfotoscmd{
+  display: flex;
+  gap: 20px;
+}
+
+#poster{
+  width: 23%;
+}
+
+#astro{
+  width: 23%;
+}
+
+#skate{
+  width: 46%;
+}
+
+#insta{
+  width: 95.5%;
 }
